mejorando el footer

--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
    <!--Footer en arreglo..-->
    <footer>
       <div class="algo">
-         <h5>algo</h5>
+         <a href="#"><img src="./assets/iconos/instagram.png" alt="instagram"></a>
+         <a href="#"><img src="./assets/iconos/twitter.png" alt="twitter"></a>
+         <a href="#"><img src="./assets/iconos/facebook.png" alt="facebook"></a>
       </div>
    </footer>
 
